--- a/quickshell/translations/poexports/pt.json
+++ b/quickshell/translations/poexports/pt.json
@@ -764,6 +764,9 @@
   "Enter password for ": {
     "Enter password for ": "Insira senha para "
   },
+  "Enter this passkey on ": {
+    "Enter this passkey on ": ""
+  },
   "Error": {
     "Error": ""
   },
