--- a/quickshell/translations/template.json
+++ b/quickshell/translations/template.json
@@ -1778,6 +1778,13 @@
     "comment": ""
   },
   {
+    "term": "Enter this passkey on ",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Error",
     "translation": "",
     "context": "",
