launcher: re-create grid on open

--- a/quickshell/translations/poexports/ja.json
+++ b/quickshell/translations/poexports/ja.json
@@ -765,7 +765,7 @@
     "Enter password for ": "パスワードを入力"
   },
   "Enter this passkey on ": {
-    "Enter this passkey on ": ""
+    "Enter this passkey on ": "ここでパスキーを入力してください "
   },
   "Error": {
     "Error": "エラー"
