--- a/quickshell/translations/poexports/zh_CN.json
+++ b/quickshell/translations/poexports/zh_CN.json
@@ -765,7 +765,7 @@
     "Enter password for ": "输入密码"
   },
   "Enter this passkey on ": {
-    "Enter this passkey on ": ""
+    "Enter this passkey on ": "在该处输入此通行密钥 "
   },
   "Error": {
     "Error": "错误"
